--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;}
+    align-items: center;
+    gap: 30px;
+}
 
 #buttons{
     display: flex;
-    
+    gap: 15px;
 }
+
+
